corrected spacing between user-ico and user-desc

--- a/style.css
+++ b/style.css
@@ -196,7 +196,6 @@ main {
 
 .user {
   display: flex;
-  justify-content: space-between;
 }
 
 .user-desc {
